--- a/ phukien/GiaPhuc/Site.Master
+++ b/ phukien/GiaPhuc/Site.Master
@@ -4,13 +4,9 @@
 <%@ Register Src="~/Controls/OnTopControl.ascx" TagName="OnTop" TagPrefix="uc" %>
 <%@ Register Src="~/Controls/LeftLayout.ascx" TagName="LeftLayout" TagPrefix="uc" %>
 <%@ Register Src="~/Controls/TopMenuControl.ascx" TagName="TopMenu" TagPrefix="uc" %>
-<%@ Register Src="~/Controls/HorizontalBannerControl.ascx" TagName="HorizontalBanner"
-    TagPrefix="uc" %>
-<%@ Register Src="~/Controls/AdvertiseControl.ascx" TagName="Advertise" TagPrefix="uc" %>
 <%@ Register Src="~/Controls/HeaderControl.ascx" TagName="Header" TagPrefix="uc" %>
 <%@ Register Src="~/Controls/PostFooterControl.ascx" TagName="PostFooter" TagPrefix="uc" %>
 <%@ Register Src="~/Controls/FooterControl.ascx" TagName="Footer" TagPrefix="uc" %>
-<%@ Register Src="~/Controls/LocationControl.ascx" TagName="Location" TagPrefix="uc" %>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="vi">
 <head runat="server">
@@ -23,41 +19,18 @@
     <%--. Giao hàng tận nơi, giá tốt nhất. ĐT: 0903.71.20.70 (Mr.Đạt)--%>
     <meta name="robots" content="index, follow" />
     <meta name="msvalidate.01" content="914CB68D9763F8228C191DB5DD29E567" />
-    <link href="/static/css/dropdown-menu.min.css" rel="stylesheet" type="text/css" />
-    <link href="/static/css/site.min.css" rel="stylesheet" type="text/css" />
-    <%--<link href="/static/css/christmas.min.css" rel="stylesheet" type="text/css" />--%>
-    <link href="/static/css/productstyle.min.css" rel="stylesheet" type="text/css" />
-    <link href="/static/response/1024.min.css" rel="stylesheet" type="text/css" />
-    <link href="/static/response/10cols.min.css" rel="stylesheet" type="text/css" />
-    <link href="/static/response/11cols.min.css" rel="stylesheet" type="text/css" />
-    <link href="/static/response/12cols.min.css" rel="stylesheet" type="text/css" />
-    <link href="/static/response/2cols.min.css" rel="stylesheet" type="text/css" />
-    <link href="/static/response/3cols.min.css" rel="stylesheet" type="text/css" />
-    <link href="/static/response/480.min.css" rel="stylesheet" type="text/css" />
-    <link href="/static/response/4cols.min.css" rel="stylesheet" type="text/css" />
-    <link href="/static/response/5cols.min.css" rel="stylesheet" type="text/css" />
-    <link href="/static/response/6cols.min.css" rel="stylesheet" type="text/css" />
-    <link href="/static/response/768.min.css" rel="stylesheet" type="text/css" />
-    <link href="/static/response/7cols.min.css" rel="stylesheet" type="text/css" />
-    <link href="/static/response/8cols.min.css" rel="stylesheet" type="text/css" />
-    <link href="/static/response/9cols.min.css" rel="stylesheet" type="text/css" />
-    <link href="/static/response/col.min.css" rel="stylesheet" type="text/css" />
-    <link href="static/css/menu/skins/black.min.css" rel="stylesheet" type="text/css" />
-    <link href="/static/css/slider/slider.min.css" rel="stylesheet" type="text/css" />
-    <script src="/Scripts/jquery-1.9.0.min.js" type="text/javascript"></script>
-    <script src="/Scripts/jquery-scrolltofixed-min.js" type="text/javascript"></script>
-    <script src="/Scripts/menu/jquery.hoverIntent.minified.js" type="text/javascript"></script>
-    <script src="/Scripts/menu/jquery.dcmegamenu.1.3.3.min.js" type="text/javascript"></script>
-    <script src="/Scripts/jquery.lazy.min.js" type="text/javascript"></script>
+    <%= WebExtensions.CombresLink("siteCss") %>  
+    <%= WebExtensions.CombresLink("siteJs") %>
     <asp:ContentPlaceHolder ID="HeadContent" runat="server">
     </asp:ContentPlaceHolder>
     <script type="text/javascript">
 
         (function (i, s, o, g, r, a, m) {
             i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-                (i[r].q = i[r].q || []).push(arguments)
+                (i[r].q = i[r].q || []).push(arguments);
             }, i[r].l = 1 * new Date(); a = s.createElement(o),
-        		  m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+        		  m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g;
+            m.parentNode.insertBefore(a, m);
         })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
         ga('create', 'UA-41392819-1', 'phukienipadx.com');
