--- a/trunk/ phukien/GiaPhuc/Site.Master
+++ b/trunk/ phukien/GiaPhuc/Site.Master
@@ -108,6 +108,9 @@
     <div class="wrapper">
         <uc:Footer ID="Footer1" runat="server"></uc:Footer>
     </div>
+    <script type="text/javascript">
+        jQuery("img").lazy();
+    </script>
     </form>
 </body>
 </html>
